JS: Count words, characters

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +20,15 @@
     <!-- js script 연결 -->
     <script src="main.js" defer></script>
 </head>
+
 <body>
-    
+    <form>
+        <p><textarea placeholder="Enter any script" class="textInput"></textarea></p>
+        <p> 글자수(공백미포함) : <span class="lengthWOblank">0자</span> </p> 
+        <p> 글자수(공백포함) : <span class="lengthWblank">0자</span> </p> 
+        <p> 단어수 : <span class="words">0자</span> </p> 
+        <p> 리딩타임 : <span class="readingTime">0자</span> </p> 
+    </form>
 </body>
+
 </html>
