--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                         <br/> 만큼 말했습니다.
                     </div>
                     <p class="cpm2"></p>
+                    <p class="speed"></p>
                 </div>
             </div>
 
