add default cpm

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <p>Slow            Fast</p>   
                     <input type="range" min="310" max="550" value="430" 
                         step="10" class="slider" id="myRange" list="tickmarks">
-                    <p class="cpm"></p>
+                    <p class="cpm">430 Character / Minute</p>
                 </div>
                 <p class="cpmText">
                     360 cpm : 오디오북 속도<br/>
