--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 
     <!-- 검색엔진 -->
     <meta name="keywords" content="발표시간 계산기, 글자수세기, 단어수세기, PT시간 측정">
-    <meta name="description" content='여러분의 발표/PT가 몇 분 걸리는지 궁금하다면? 텍스트를 넣으면 "PT/발표시간", 글자수, 단어수를 계산합니다. (리딩타임/1분자기소개/5분말하기)'>
+    <meta name="description" content='여러분의 발표/PT가 몇 분 걸리는지 궁금하다면? 텍스트를 넣으면 "PT/발표시간", 글자수, 단어수를 계산합니다.'>
     <!-- 네이버 SEO -->
     <meta name="naver-site-verification" content="0ce0c7312843df52707cb7943660d1ea1b5c8a5c" />
+    
+    <!-- Open Graph -->
+    <meta property="og:title" content="발표시간 계산기, 글자수 세기">
+    <meta property="og:description" content="여러분의 발표/PT가 몇 분 걸리는지 궁금하다면?">
+    <meta property="og:image" content="imgs/readingTime_logo4.png">
+    <meta property="og:url" content="https://presentationtime.netlify.app" />
 
-
+출처: https://nowonbun.tistory.com/517 [명월 일지]
 
     <meta name="author" content="김의진">
     <!-- UTF 8 로 설정 -->
