Add google search console

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <meta name="description" content='여러분의 발표/PT가 몇 분 걸리는지 궁금하다면? 텍스트를 넣으면 "PT/발표시간", 글자수, 단어수를 계산합니다.'>
     <!-- 네이버 SEO -->
     <meta name="naver-site-verification" content="0ce0c7312843df52707cb7943660d1ea1b5c8a5c" />
-    
+    <link rel="canonical" href="https://presentationtime.netlify.app">
     <!-- Open Graph -->
     <meta property="og:title" content="발표시간 계산기, 글자수 세기">
-    <meta property="og:description" content="여러분의 발표/PT가 몇 분 걸리는지 궁금하다면?">
+    <meta property="og:description" content="당신의 PT가 몇 분 걸리는지 궁금하다면?">
     <meta property="og:image" content="imgs/readingTime_logo4.png">
     <meta property="og:url" content="https://presentationtime.netlify.app" />
 
