Size change & media query

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
     <meta property="og:image" content="imgs/readingTime_logo4.png">
     <meta property="og:url" content="https://presentationtime.netlify.app" />
 
-출처: https://nowonbun.tistory.com/517 [명월 일지]
-
     <meta name="author" content="김의진">
     <!-- UTF 8 로 설정 -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -52,7 +50,7 @@
 
     <div class="title">
         <i><img src="imgs/readingTime_logo4.png" alt=""> </i>
-        <span>발표시간 계산기</span>
+        <h1>발표시간 계산기</h1>
 
     </div>
     
@@ -200,7 +198,7 @@
             </a>
         </div>
         <!-- <p class="copyright">ⓒ Copyright <strong>EuiJin Kim</strong> 2021</p> -->
-        <p class="copyright"> © 2021 https://gytks4.github.io/readingtime/. All rights reserved | Developed by 김의진</p>
+        <p class="copyright"> © 2021 https://presentationtime.netlify.app. All rights reserved.</p>
         
     </section>
 </body>
