--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="canonical" href="https://presentationtime.netlify.app">
     <!-- Open Graph -->
     <meta property="og:title" content="발표시간 계산기, 글자수 세기">
-    <meta property="og:description" content="당신의 PT가 몇 분 걸리는지 궁금하다면?">
+    <meta property="og:description" content="PT가 몇 분 걸리는지 궁금하다면?">
     <meta property="og:image" content="imgs/readingTime_logo4.png">
     <meta property="og:url" content="https://presentationtime.netlify.app" />
 
