--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     <div class="title">
         <i><img src="imgs/readingTime_logo4.png" alt=""> </i>
         <h1>발표시간 계산기</h1>
-
     </div>
+    <p class="notIE">* Internet Explore 환경은 지원하지 않습니다.</p>
     
     <section id="main">
-        <textarea placeholder="텍스트를 입력하면 글자수, 단어수, 리딩타임을 측정합니다. 한국어 기준이지만 타언어가 조금 포함되어도 무방합니다." class="textInput"></textarea>
+        <textarea placeholder="텍스트를 입력하면 글자수, 단어수, 리딩타임을 측정합니다. 한국어 기반으로 타언어가 섞여 있어도 무방합니다." class="textInput"></textarea>
         
         <table class="counter">
             <tr>
@@ -104,8 +104,8 @@
                 </div>
                 <p class="cpmText">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>~390</strong> : 느린 말하기 and 쉼이 긴 말하기<br/>
-                    <strong>390~429</strong> : 느린 말하기 or 쉼이 긴 말하기<br/>
-                    <strong>430~449</strong> : 평균<br/>
+                    <strong>390~419</strong> : 느린 말하기 or 쉼이 긴 말하기<br/>
+                    <strong>420~449</strong> : 보통 속도<br/>
                     <strong>450~479</strong> : 빠른 말하기 or 쉼이 짧은 말하기<br/>
                     <strong>480~</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    : 빠른 말하기 and 쉼이 짧은 말하기<br/>
                 </p>
