delete instagram tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- 검색엔진 -->
     <meta name="keywords" content="발표시간 계산기, 글자수세기, 단어수세기, PT시간 측정">
-    <meta name="description" content='여러분의 발표/PT가 몇 분 걸리는지 궁금하다면? 텍스트를 넣으면 "PT/발표시간", 글자수, 단어수를 계산합니다.'>
+    <meta name="description" content='여러분의 발표/PT가 몇 분 걸리는지 궁금하다면? 텍스트를 넣으면 "대본/PT/발표시간", 글자수, 단어수를 계산합니다.'>
     <!-- 네이버 SEO -->
     <meta name="naver-site-verification" content="0ce0c7312843df52707cb7943660d1ea1b5c8a5c">
     <link rel="canonical" href="https://presentationtime.netlify.app">
@@ -211,9 +211,9 @@ Internet Explore 환경은 지원하지 않습니다." class="textInput"></texta
             <a href="https://github.com/gytks4" target="_blank">
                 <img src="imgs/github2.png" alt="">
             </a>
-            <a href="https://www.instagram.com/sisyphe_philo/" target="_blank">
+            <!-- <a href="https://www.instagram.com/sisyphe_philo/" target="_blank">
                 <img src="imgs/instagram3.png" alt="">
-            </a>
+            </a> -->
             <a href="https://blog.naver.com/gytks4" target="_blank">
                 <img src="imgs/naverBlog.png" alt="">
             </a>
