--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                 <td><span class="words">0 개</span></td>
             </tr>
         </table>
-        <textarea placeholder="스크립트를 입력하면 글자수, 단어수, 리딩타임을 측정합니다. &#13;&#10;
-한국어 기반으로 타언어가 섞여 있어도 무방합니다. &#13;&#10;
-Internet Explore 환경은 지원하지 않습니다." class="textInput"></textarea>
+        <textarea placeholder="⦁ 스크립트를 입력하면 글자수, 단어수, 리딩타임을 측정합니다. &#13;&#10;
+⦁ 한국어 기반으로 타언어가 섞여 있어도 무방합니다. &#13;&#10;
+⦁ Internet Explore 환경은 지원하지 않습니다." class="textInput"></textarea>
         <table class="counter">
             <tr>
                 <td class="tdReadingTime">PT Time</td>
