세부 -> 정밀 wording change

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="customizeContainer">
                 <div class="radioBox">
                     <input type="radio" name="checking" id="customizeRadio" value="customize"> 
-                    <label for="customizeRadio">CPM 자가측정 모드</label>
+                    <label for="customizeRadio">CPM 정밀측정 모드</label>
                 </div>
                 <p class="paragraph">
                     1. 스톱워치를 이용하여 <strong>20초 동안</strong> 자신의 속도대로 읽습니다.<br/>
