간편 -> 일반 wording edit

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="sliderContainer">
                 <div class="radioBox">
                     <input type="radio" name="checking" id="sliderRadio" checked value="slider"> 
-                    <label for="sliderRadio">일반 모드</label>
+                    <label for="sliderRadio">간편 모드</label>
                 </div>
                 <p class="paragraph">1. 좌우 스크롤하면, 해당 속도에 맞춰 PT Time을 계산합니다.<br/>
                 2. 자신의 <strong>말하기 속도</strong>와 문장/PPT 사이의 <strong>쉼</strong>을 고려합니다.
