en version - wpm

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- css link 연결 -->
     <link rel="stylesheet" href="style.css">
     <!-- js script 연결 -->
-    <script src="main.js" defer></script>
+    <script src="src/main.js" defer></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VPQ3BBXLWS"></script>
@@ -173,7 +173,7 @@
     <!-- contact -->
     <section id="contact">
         <p class="subtitle">Contact</p>
-        <p class="description">2021.03.14. Modified<br/>
+        <p class="description">2021.03.17. Modified<br/>
             불편한 점이 있다면 아래 SNS로 연락주시면 감사하겠습니다.</p>
         <div class="icons">
             <a href="https://github.com/gytks4" target="_blank">
