--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
         <i><img src="imgs/readingTime_logo4.png" alt=""> </i>
         <h1>발표시간 계산기</h1>
     </div>
+
+    <div class="languageContainer">
+        <span>Language :&nbsp;</span>
+        <select class="language" name="language">
+            <option value="" >Korean</option>
+            <option value="en" selected>English</option>
+        </select>
+    </div>
     <!-- main -->
     <section id="main">
         <!-- word/character counter -->
@@ -70,9 +78,10 @@
             </tr>
         </table>
         <!-- textInput -->
-        <textarea placeholder="⦁ 스크립트를 입력하면 글자수, 단어수, 리딩타임을 측정합니다. &#13;&#10;
-⦁ 한국어 기반으로 타언어가 섞여 있어도 무방합니다. &#13;&#10;
-⦁ Internet Explore 환경은 지원하지 않습니다." class="textInput"></textarea>
+        <textarea 
+            placeholder=" ⦁ 스크립트를 입력하면 글자수, 단어수, 리딩타임을 측정합니다.
+            &#13;&#10; ⦁ Internet Explore 환경은 지원하지 않습니다." 
+            class="textInput"></textarea>
         <!-- PT time  -->
         <table class="counter">
             <tr>
@@ -100,7 +109,7 @@
                     <p>Slow            Fast</p>   
                     <input type="range" min="310" max="550" value="430" 
                         step="10" class="slider" id="myRange" list="tickmarks">
-                    <p class="cpm">430 CPM (Character/Minute)</p>
+                    <p class="cpm">430 CPM (Characters Per Minute)</p>
                 </div>
                 <table class="cpmText">
                     <tr>
@@ -173,7 +182,7 @@
     <!-- contact -->
     <section id="contact">
         <p class="subtitle">Contact</p>
-        <p class="description">2021.03.17. Modified<br/>
+        <p class="description">2021.03.18. Modified<br/>
             불편한 점이 있다면 아래 SNS로 연락주시면 감사하겠습니다.</p>
         <div class="icons">
             <a href="https://github.com/gytks4" target="_blank">
