change default selected language

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <div class="languageContainer">
         <span>Language :&nbsp;</span>
         <select class="language" name="language">
-            <option value="" >Korean</option>
-            <option value="en" selected>English</option>
+            <option value="" selected>Korean</option>
+            <option value="en" >English</option>
         </select>
     </div>
     <!-- main -->
