delete br tag in character counter

--- a/en/index.html
+++ b/en/index.html
@@ -66,8 +66,8 @@
         <!-- word/character counter -->
         <table class="counter">
             <tr>
-                <td>Characters<br/>(including spaces)</td>
-                <td>Characters<br/>(without spaces)</td>
+                <td>Characters (including spaces)</td>
+                <td>Characters (without spaces)</td>
                 <td>Words</td>
             </tr>
             <tr>
