change robots index,follow

--- a/en/index.html
+++ b/en/index.html
@@ -24,7 +24,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- 구글에서 색인화, 링크연결하도록 -->
     <meta name="google-site-verification" content="JHUCo9mGvBm8ZBcUzAswjKW12a25BhWXzRidUhx5dVs" />
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, follow">
 
     <!-- fontawesome 주소를 달아준다 -->
     <script src="https://kit.fontawesome.com/76cfe4f16b.js" crossorigin="anonymous"></script>
