--- a/en/index.html
+++ b/en/index.html
@@ -78,8 +78,8 @@
         </table>
         <!-- textInput -->
         <!-- &#13;&#10 줄바꿈 -->
-        <textarea placeholder=" ⦁ If you enter your presentation script, it will return the number of characters, words and expected presentation time.
-            &#13;&#10; ⦁ It do Not work on Internet Explore." 
+        <textarea placeholder=" ⦁ If you enter your presentation script, it will return the number of characters, words and expected presentation time.&#13;&#10;
+ ⦁ It does Not work on Internet Explore." 
             class="textInput"></textarea>
         <!-- PT time  -->
         <table class="counter">
