--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         </table>
         <!-- textInput -->
         <textarea 
-            placeholder=" ⦁ 스크립트를 입력하면 글자수, 단어수, 리딩타임을 측정합니다.
-            &#13;&#10; ⦁ Internet Explore 환경은 지원하지 않습니다." 
+            placeholder=" ⦁ 스크립트를 입력하면 글자수, 단어수, 리딩타임을 측정합니다.&#13;&#10;
+ ⦁ Internet Explore 환경은 지원하지 않습니다." 
             class="textInput"></textarea>
         <!-- PT time  -->
         <table class="counter">
