change speed criteria - en version

--- a/en/index.html
+++ b/en/index.html
@@ -107,30 +107,30 @@
                 <!-- <br/>(스크롤하여 속도를 조절해주세요.) -->
                 <div class="box1"> 
                     <p>Slow            Fast</p>   
-                    <input type="range" min="70" max="180" value="125" 
+                    <input type="range" min="80" max="200" value="140" 
                         step="5" class="slider" id="myRange" list="tickmarks">
-                    <p class="cpm">125 WPM (Words Per Minute)</p>
+                    <p class="cpm">140 WPM (Words Per Minute)</p>
                 </div>
                 <table class="cpmText">
                     <tr>
-                        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>~100</strong></td>
-                        <td>Very slow</td>
+                        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>~110</strong></td>
+                        <td>Slow speech and long verval pause</td>
                     </tr>
                     <tr>
-                        <td><strong>100~120</strong></td>
-                        <td>Little slow</td>
-                    </tr>
-                    <tr>
-                        <td><strong>120~130</strong></td>
-                        <td>Average</td>
+                        <td><strong>110~130</strong></td>
+                        <td>Slow speech or long verval pause</td>
                     </tr>
                     <tr>
                         <td><strong>130~150</strong></td>
-                        <td>Little fast</td>
+                        <td>Average</td>
                     </tr>
                     <tr>
-                        <td><strong>150~</strong></td>
-                        <td>Very fast</td>
+                        <td><strong>150~170</strong></td>
+                        <td>Fast speech or short verbal pause</td>
+                    </tr>
+                    <tr>
+                        <td><strong>170~</strong></td>
+                        <td>Fast speech and short verbal pause</td>
                     </tr>
                 </table>
                 <!-- <p>* 매우 천천히 설명하는 발표는 330 CPM까지도 내려갑니다.</p> -->
