--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
     gtag('config', 'G-VPQ3BBXLWS');
     </script>
+    <!-- Ad sense 애드 센스 코드 -->
+    <script data-ad-client="ca-pub-2291941429982946" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
