--- a/en/index.html
+++ b/en/index.html
@@ -45,6 +45,8 @@
         gtag('js', new Date());
         gtag('config', 'G-VPQ3BBXLWS');
     </script>
+    <!-- Ad sense 애드 센스 코드 -->
+    <script data-ad-client="ca-pub-2291941429982946" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
